2005-02-24  Martin Blom  <martin@blom.org>

	* configure, configure.in, src/Makefile.am, src/gencomp.c,
	src/gencpu.c, src/newcpu.c, src/readcpu.c, src/sysconfig.h.in,
	src/table68k, src/include/readcpu.h, src/blomcall.c,
	src/include/blomcall.h: Added new op-codes for multitasking x86
	calls: BCALL, BCALLNR and BRESUME.

	* src/od-generic/memory.c: Made it work even on NX-enabled CPUs
	like Athlon64.

	* src/hardfile_unix.c: Made it work with > 2 GB hardfiles.

	* Imported E-UAE 0.8.27 into local CVS.

2005-01-07 00:45  evi1rich

	* configure.in: Enough! Enough! This is E-UAE 0.8.27 final.

2005-01-07 00:15  evi1rich

	* src/gfx-sdl/sdlgfx.c: Don't try to use a HW surface for Amiga
	  screens in SDL gfx driver. This need more testing yet.

2005-01-06 23:02  evi1rich

	* docs/configuration.txt: Updated configuration doc.

2005-01-06 22:21  evi1rich

	* src/gfx-x11/xwin.c: X11 gfx driver now has default settings
	  x11.use_mitshm=true and x11.hide_cursor=true (previously these
	  defaulted to false).

2005-01-06 21:56  evi1rich

	* src/: compemu_raw_x86.c, compemu_support.c, include/compemu.h:
	  Tidied up some compiler warnings when building the JIT.

2005-01-06 21:25  evi1rich

	* src/od-generic/memory.c: Bugger! - and this one too (and this was
	  the important one).

2005-01-06 21:23  evi1rich

	* src/main.c: Missed this file with previous check-in.

2005-01-06 21:21  evi1rich

	* src/: memory.c, include/memory.h, include/sysdeps.h: Cleared out
	  some cruft from the JIT direct-memory system.

2005-01-06 21:18  evi1rich

	* configure.in: Disable building with filesystem threads for now.
	  It hurts performance on most platforms.

2005-01-06 21:12  evi1rich

	* src/expansion.c: Fixed compiler warning.

2005-01-06 02:00  evi1rich

	* src/md-i386-gcc/m68k.h: Tighten constraint on v parameter to i386
	  optimized flag-handling function optflag_addb(). Fixes building
	  with gcc-2.95.

2005-01-04 01:09  evi1rich
