@@ -226,7 +226,7 @@ extern void chipmem_lput_ce2 (uaecptr, uae_u32) REGPARAM;
 extern void chipmem_wput_ce2 (uaecptr, uae_u32) REGPARAM;
 extern void chipmem_bput_ce2 (uaecptr, uae_u32) REGPARAM;
 
-#ifdef NATMEM_OFFSET
+#if defined(NATMEM_OFFSET) && NATMEM_OFFSET != 0
 
 typedef struct shmpiece_reg {
     uae_u8 *native_address;
@@ -240,7 +240,10 @@ extern shmpiece *shm_start;
 
 #endif
 
-extern uae_u8 *mapped_malloc (size_t, char *);
+#define MAPPED_MALLOC_FAILED   ((uae_u8*) -1)
+#define MAPPED_MALLOC_UNKNOWN  ((uae_u8*) -1)
+
+extern uae_u8 *mapped_malloc (size_t, char *, uae_u32);
 extern void mapped_free (uae_u8 *);
 extern void clearexec (void);
 extern void mapkick (void);
